Bug 349841 - If I have several different sets of LaTeX commands available from different .cwl files, I can only access those in the top 8 tabs as no more 'fit' into the panel and there is no scroll
Summary: If I have several different sets of LaTeX commands available from different ....
Status: RESOLVED FIXED
Alias: None
Product: kile
Classification: Applications
Component: user interface (other bugs)
Version First Reported In: 2.1.3
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Michel Ludwig
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-07-02 22:56 UTC by reescf
Modified: 2018-01-01 09:35 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description reescf 2015-07-02 22:56:37 UTC
I have a bunch of .cwl files enabled (with some difficulty but that's another issue). Not only does this enable autocompletion, it also gets the available commands listed in the side panel on the left in the 'LaTeX' tab. When 'LaTeX' is selected, stacked tabs are available on the left. There is one, I think, for each .cwl file enabled. For example: 'latex-document', 'tex', 'booktabs', 'multicol', 'class-beamer', 'graphicx', 'ifthen', 'color'... etc.  However, I can only access those which 'fit' into the panel window. In my case, this is 8. Any more than that and the others become inaccessible. I assume that there should be the capacity to scroll down to further tabs so that the commands for further .cwl files can be accessed also. If so, this is a bug report. If not, it is a feature request.

Reproducible: Always

Steps to Reproduce:
1. Enable lots of .cwl files in preferences. (On a small screen like mine, 9 files should do it. But my screen is only 768 pixels high and some of that space is used for KDE's panel etc. On a larger screen, you'll presumably need more.
2. Open a document, make sure the left panel is shown and click the 'LaTeX' tab from the rotated list of options to the right of the panel and the left of the document window. 
3. Try to access the list of commands for the .cwl file which is not initially shown due to lack of vertical space.

Actual Results:  
It is impossible to accomplish what you try to do in step 3.

Expected Results:  
It is possible to accomplish what you try to do in step 3. For example, the stacked tabs could scroll so that you can bring those which are initially hidden into view. This is how the 'Files and Projects' display works, for example: if it cannot all be seen, you can scroll down and/or right to reveal what is initially hidden. Similarly for 'Structure'. 'OpenFile' is not dissimilar although it scrolls only right, arranging thing in columns. Anything like this would be fine.

This is not a new issue i.e. not a regression. Kile has behaved like this for as long as I've been using it.
Comment 1 reescf 2017-09-10 18:12:11 UTC
This bug persists in 2.9.91.
Comment 2 Michel Ludwig 2018-01-01 09:35:38 UTC
Git commit e102fc0b929aca0d1af4e96ff21d3b8c1375c61a by Michel Ludwig.
Committed on 01/01/2018 at 09:34.
Pushed by mludwig into branch 'master'.

Redesign the UI for the completion side bar

The new UI allows it to display an arbitrary number of completion files.

M  +9    -3    src/kile.cpp
M  +0    -4    src/kile.kcfg
M  +0    -3    src/widgets/codecompletionconfigwidget.cpp
M  +1    -77   src/widgets/codecompletionconfigwidget.ui
M  +102  -88   src/widgets/commandview.cpp
M  +28   -30   src/widgets/commandview.h

https://commits.kde.org/kile/e102fc0b929aca0d1af4e96ff21d3b8c1375c61a