Redesign the UI for the completion side bar

The new UI allows it to display an arbitrary number of completion files.

BUG: 349841